Correction de l'alignement des icônes des titres

--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -38,8 +38,6 @@
             padding-left: $length-48;
 
             &:after {
-                top: $length-4;
-
                 @include sprite-width($articles);
                 @include sprite-height($articles);
             }
